--- a/public/css/HomePageStyle/home.css
+++ b/public/css/HomePageStyle/home.css
@@ -499,6 +499,29 @@ body {
                         width: 20px;
                     }
                 }
+                & .div-message-disponibilidade-logoff {
+                    font-family: Arial, Helvetica, sans-serif;
+                    width: calc(100% - 10px);
+                    height: 40px;
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    background-color: rgb(184, 51, 51);
+                    /*border: 1px solid rgb(170, 90, 90);*/
+                    margin-top: 10px;
+                    padding-left: 10px;
+                    border-radius: 5px;
+
+                    & #message-disponibilidade-logoff {
+                        /*background-color: rgb(252, 129, 129);*/
+                        color: rgb(255, 255, 255);
+                        margin-left: 10px;
+                    }
+
+                    & #icon-verify {
+                        width: 30px;
+                    }
+                }
             }
         }
     }
@@ -1001,6 +1024,30 @@ body {
 
                     & #icon-verify {
                         width: 20px;
+                    }
+                }
+                & .div-message-disponibilidade-logoff {
+                    font-family: Arial, Helvetica, sans-serif;
+                    width: calc(100% - 10px);
+                    height: 40px;
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    background-color: rgb(184, 51, 51);
+                    /*border: 1px solid rgb(170, 90, 90);*/
+                    margin-top: 10px;
+                    padding-left: 10px;
+                    border-radius: 5px;
+
+                    & #message-disponibilidade-logoff {
+                        /*background-color: rgb(252, 129, 129);*/
+                        color: rgb(255, 255, 255);
+                        margin-left: 10px;
+                        font-size: 14px;
+                    }
+
+                    & #icon-verify {
+                        width: 25px;
                     }
                 }
             }
@@ -1506,6 +1553,31 @@ body {
                         /*background-color: rgb(252, 129, 129);*/
                         color: rgb(148, 23, 18);
                         margin-left: 10px;
+                        text-align: center;
+                    }
+
+                    & #icon-verify {
+                        width: 30px;
+                    }
+                }
+                & .div-message-disponibilidade-logoff {
+                    font-family: Arial, Helvetica, sans-serif;
+                    width: calc(100% - 10px);
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    background-color: rgb(184, 51, 51);
+                    /*border: 1px solid rgb(170, 90, 90);*/
+                    margin-top: 10px;
+                    padding-top: 10px;
+                    padding-left: 10px;
+                    border-radius: 5px;
+
+                    & #message-disponibilidade-logoff {
+                        /*background-color: rgb(252, 129, 129);*/
+                        color: rgb(255, 255, 255);
+                        margin-left: 10px;
+                        font-size: 14px;
                         text-align: center;
                     }
 
