--- a/public/css/RegisterPageStyle/register.css
+++ b/public/css/RegisterPageStyle/register.css
@@ -47,6 +47,10 @@
                         width: 20px;
                     }
                 }
+
+                & #btn-submit {
+                    display: none;
+                }
             }
         }
 
