--- a/public/css/ProfilePageStyle/profile.css
+++ b/public/css/ProfilePageStyle/profile.css
@@ -23,7 +23,11 @@
                 width: 100px;
 
                 & #img-user {
-                    width: 100px;
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 50%;
+                    object-fit: cover;
+                    box-shadow: 2px 2px 10px rgb(0, 0, 0);
                 }
 
                 & #edit-img { 
@@ -36,6 +40,10 @@
 
                     & img {
                         width: 20px;
+                    }
+
+                    & #inp_img_profile {
+                        display: none;
                     }
                 }
             }
@@ -428,8 +436,9 @@
                     }
                 }
             }
-
-            
+            .div-table::-webkit-scrollbar {
+                display: none;
+            }        
         }
     }
 }
@@ -448,13 +457,22 @@
     
             & .img-profile {
                 position: relative;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
                 margin-top: 50px;
                 margin-bottom: 50px;
-    
+                height: 100px;
+                width: 100px;
+
                 & #img-user {
-                    width: 100px;
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 50%;
+                    object-fit: cover;
+                    box-shadow: 2px 2px 10px rgb(0, 0, 0);
                 }
-    
+
                 & #edit-img { 
                     border: none;
                     outline: none;
@@ -462,9 +480,13 @@
                     top: 95px;
                     right: -15px;
                     background-color: transparent;
-    
+
                     & img {
                         width: 20px;
+                    }
+
+                    & #inp_img_profile {
+                        display: none;
                     }
                 }
             }
@@ -864,6 +886,9 @@
                     padding-left: 20px;
                 }
             }
+            .div-table::-webkit-scrollbar {
+                display: none;
+            }
         }
     }
 }
@@ -882,13 +907,22 @@
     
             & .img-profile {
                 position: relative;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
                 margin-top: 50px;
                 margin-bottom: 50px;
-    
+                height: 100px;
+                width: 100px;
+
                 & #img-user {
-                    width: 100px;
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 50%;
+                    object-fit: cover;
+                    box-shadow: 2px 2px 10px rgb(0, 0, 0);
                 }
-    
+
                 & #edit-img { 
                     border: none;
                     outline: none;
@@ -896,9 +930,13 @@
                     top: 95px;
                     right: -15px;
                     background-color: transparent;
-    
+
                     & img {
                         width: 20px;
+                    }
+
+                    & #inp_img_profile {
+                        display: none;
                     }
                 }
             }
@@ -1312,6 +1350,9 @@
                     padding-left: 10px;
                 }
             }
+        }
+        .div-table::-webkit-scrollbar {
+            display: none;
         }
     }
 }
